# swipe-fingerprint

./: .gitignore  4121.c  4121.sh  4122.c  4123.c  4123.sh  CMakeLists.txt  Makefile  README.md  _CMakeLists.txt  bmp.c  bmp.h  bmp8bit.c  config.h  corr.c  corr.h  corr_2d.c  correlation_algorithm.c  correlation_algorithm.h  correlation_algorithm_2d.c  correlation_algorithm_2d.h  data.h  gmfinger.c  info.c  main.c  match.c  matcher.sh  reconstruct_bmp8bit.c  split.c  test.c  tests.c  tests_2d.c
